Autogen: Add support for per-config sources

Fixes: #20682