Tests/QtAutogen/MocOnly/CfgDebug.hpp
@@ -1,0 +1,15 @@
+#ifndef CFGDEBUG_HPP
+#define CFGDEBUG_HPP
+
+#include <QObject>
+
+/* clang-format off */
+class CfgDebug : public QObject
+{
+  Q_OBJECT
+public:
+  CfgDebug();
+};
+/* clang-format on */
+
+#endif
