Tests/QtAutogen/MocOnly/CfgOther.cpp
@@ -1,0 +1,5 @@
+#include "CfgOther.hpp"
+
+CfgOther::CfgOther()
+{
+}
